WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54011
[GTK] Fix after
r77874
, m_isConnected is initialized before the socket is opened
https://bugs.webkit.org/show_bug.cgi?id=54011
Summary
[GTK] Fix after r77874, m_isConnected is initialized before the socket is opened
Alejandro G. Castro
Reported
2011-02-08 09:08:40 PST
After
r77874
we have to define m_isConnected when openning the connection and not in the initialization of the object.
Attachments
Proposed patch
(2.45 KB, patch)
2011-02-08 09:14 PST
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2011-02-08 09:14:02 PST
Created
attachment 81645
[details]
Proposed patch
Alejandro G. Castro
Comment 2
2011-02-08 23:27:15 PST
Landed
http://trac.webkit.org/changeset/78022
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug