2011-02-08  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Fix after r77874, m_isConnected is initialized before the
        socket is opened
        https://bugs.webkit.org/show_bug.cgi?id=54011

        Fixed connection breakage after r77874, we have to wait until open
        the socket to open the connection.

        * Platform/CoreIPC/gtk/ConnectionGtk.cpp:
        (CoreIPC::Connection::platformInitialize):
        (CoreIPC::Connection::open):

Canonical link: https://commits.webkit.org/68079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78022 268f45cc-cd09-0410-ab3c-d52691b4dbfc